# NRF24-Radio-Project

./: README.md
1_RadioChat/main/: main.c
components/: CMakeLists.txt
components/include/: NRF24L01.h
components/src/: NRF24L01.c
